--- a/intercorp-web-app/firebase.json
+++ b/intercorp-web-app/firebase.json
@@ -1,6 +1,6 @@
 {
   "hosting": {
-    "public": "build",
+    "public": "dist/intercorp-web-app",
     "ignore": [
       "firebase.json",
       "**/.*",
@@ -14,3 +14,4 @@
     ]
   }
 }
+  
